--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "io.blokz.blog",
+  "name": "io.github.sn0n",
   "version": "1.0.0",
   "description": "",
   "main": "site.config.js",
