--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "io.github.sn0n",
-  "version": "0.420",
+  "name": "sn0n.co.",
+  "version": "1.0.420",
   "description": "",
   "main": "site.config.js",
   "scripts": {
